# Lattices-Jacobi_Method

./: .gitignore  BUILDING.md  CMakeCache.txt  CMakeLists.txt  JacobiMethod  LICENSE  README.md  cmake_install.cmake  gnuplotConfig  main.cpp  new
Jacobi-LLL-Benchmarking/Jacobi-LLL-Benchmarking/: main.cpp
Jacobi-LLL-Benchmarking/Jacobi-LLL-Benchmarking.xcodeproj/: project.pbxproj
Jacobi-LLL-Benchmarking/Jacobi-LLL-Benchmarking.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Jacobi-LLL-Benchmarking/Jacobi-LLL-Benchmarking.xcodeproj/project.xcworkspace/xcshareddata/: Jacobi-LLL-Benchmarking.xccheckout
Jacobi-LLL-Benchmarking/Jacobi-LLL-Benchmarking.xcodeproj/project.xcworkspace/xcuserdata/fred.xcuserdatad/: UserInterfaceState.xcuserstate
Jacobi-LLL-Benchmarking/Jacobi-LLL-Benchmarking.xcodeproj/xcuserdata/fred.xcuserdatad/xcschemes/: Jacobi-LLL-Benchmarking.xcscheme  xcschememanagement.plist
Jacobi-LLL-Benchmarking/Jacobi-LLL-Benchmarking/lib/lattice_gen/: generate_random.cpp
JacobiLLL/: JacobiLLL.cbp  JacobiLLL.depend  JacobiLLL.layout  main.cpp  tools.h
JacobiLLL/include/: JacobiMethod.h
JacobiLLL/src/: JacobiMethod.cpp
include/: JacobiMethod.h  MatrixFactory.h  ReductionQualityChecker.h  macros.h
lib/libfplll/: Makefile  Makefile.am  Makefile.in  NEWS  README.html  config.h  config.status  configure  configure.ac  libtool
lib/libfplll/src/: Makefile  Makefile.in  fplll  latticegen  llldiff
lib/libfplll/src/.deps/: evaluator.Plo  fplll.Plo  latticegen.Po  llldiff.Po  main.Po  topenum.Plo  util.Plo
lib/libfplll/src/.libs/: fplll  latticegen  llldiff
lib/libfplll/src/.libs/libfplll.0.dylib.dSYM/Contents/: Info.plist
lib/testfplllvia NTL/: Makefile  newskel.h  test  test.cpp
report/: paper.tex  presentation.tex  references.bib
report/algorithms/: euclidalgorithm.tex  fast-Jacobi.tex  genericJacobi.tex  iterativeLangrange.tex  lagrange.tex  lagrangeIT-full.tex
report/definitions/: lagrange-omega-reduced.tex
report/figlat/: bases.tex  basesgood.tex  gaussian.tex  latSVP.tex  latminimum.tex  latminimumlarge.tex  latticeZ.tex  latticegrid.tex  linearcodesballs.tex
results/11 nov/: dataHermiteRandomMatrix_Jacobi.txt  dataHermiteRandomMatrix_LLL.txt  gnuplotConfig
results/14 nov/: gnuplotConfig  jacobiReductionData copy.txt  jacobiReductionData.txt  lllReductionData.txt copy.txt  lllReductionData.txt.txt
results/4 nov/: dataHermiteRandomMatrix_Jacobi.txt  dataHermiteRandomMatrix_LLL.txt
results/latest - Jacobi after LLL/: gnuplotConfig  jacobiReductionData.txt  lllReductionData.txt  mergedDataFile.txt
src/: JacobiMethod.cpp  JacobiTests.cpp  LLLThenJacobi.cpp  MatrixFactory.cpp  ReductionQualityChecker.cpp
